# Neurosymbolic-RTE

./: .gitignore  Identification of Entailment and Contradiction Relations-A Neurosymbolic Approach.ipynb  README.MD  pyproject.toml  requirements.txt  run.py
identification_repro/: cli.py  datasets.py  reasoner.py
rte_identification/: __init__.py  cli.py  datasets.py  experiments.py  model_runtime.py
src/identification_repro/: __init__.py  datasets.py  experiments.py  model_runtime.py  reasoner.py
